[package]
name = "api-warp-rs"
version = "0.1.0"
authors = ["rambocoder <erlang@rambocoder.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
dotenv = "0.15.0"
mobc-postgres = "0.7.0"
serde = {version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }